added PDF of published paper

--- a/src/notebooks/embeddings.ipynb
+++ b/src/notebooks/embeddings.ipynb
@@ -54,9 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Zak/Desktop/privacy-standard-topic-modeling/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import pandas as pd\n",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,19 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data\n",
-    "df = pd.read_excel('../data/df_noembeddings_github.xlsx')\n",
-    "# df_noembed = pd.read_excel('../data/df_embeddings_publicdomain.xlsx')\n",
-    "# reference_only_df = pd.read_excel('../data/reference_only_df_2023-12-16.xlsx')"
+    "df = pd.read_excel('../data/df_noembeddings_github.xlsx', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +135,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>control_category</th>\n",
        "      <th>control_code</th>\n",
        "      <th>control_name</th>\n",
@@ -139,8 +145,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>121</td>\n",
+       "      <th>121</th>\n",
        "      <td>audit &amp; assurance</td>\n",
        "      <td>A&amp;A-01</td>\n",
        "      <td>audit and assurance policy and procedures</td>\n",
@@ -148,30 +153,40 @@
        "      <td>Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Review and update the policies and procedures at least annually....</td>\n",
        "      <td>Audit &amp; assurance. Audit and assurance policy and procedures. Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Re...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>audit &amp; assurance</td>\n",
+       "      <td>A&amp;A-02</td>\n",
+       "      <td>independent assessments</td>\n",
+       "      <td>ccm</td>\n",
+       "      <td>Conduct an independent audit and assurance assessment according to relevant standards at least annually. The independent audit and assurance should be free from conflicts of interest and undue inf...</td>\n",
+       "      <td>Audit &amp; assurance. Independent assessments. Conduct an independent audit and assurance assessment according to relevant standards at least annually. The independent audit and assurance should be f...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  ...                                                                                                                                                                                        full_control_text\n",
-       "0         121  ...  Audit & assurance. Audit and assurance policy and procedures. Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Re...\n",
+       "      control_category  ...                                                                                                                                                                                        full_control_text\n",
+       "121  audit & assurance  ...  Audit & assurance. Audit and assurance policy and procedures. Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Re...\n",
+       "122  audit & assurance  ...  Audit & assurance. Independent assessments. Conduct an independent audit and assurance assessment according to relevant standards at least annually. The independent audit and assurance should be f...\n",
        "\n",
-       "[1 rows x 7 columns]"
+       "[2 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# inspect df\n",
-    "df.head(1)"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,18 +241,15 @@
    "source": [
     "# BERT base\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>TO DO:</b> \n",
+    "First we create embeddings using \"bert-base-uncased\", a popular model available on HuggingFace.\n",
     "\n",
-    "- Check if the length of tokens is a limitation here and what to do about it. \n",
-    "- Check also if better model than bert-base-uncased/bert-large-uncased.\n",
-    "- No pretained privacy models were found on huggingface at present.\n",
-    "</div>\n"
+    "Feel free to play around with different models!\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,93 +265,33 @@
     "    \n",
     "    # Use the pooler output (representation of [CLS] token) and detach it to convert tensor to numpy\n",
     "    embedding = output[1].detach().numpy()\n",
-    "    return embedding\n",
-    "\n",
+    "    return embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create embeddings for each row based on the text in column \"full_control_text\"\n",
+    "# this column has the \"control category\" and \"control name\" for additional context\n",
     "df['BERTembeddings'] = df['full_control_text'].apply(get_embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>control_category</th>\n",
-       "      <th>control_code</th>\n",
-       "      <th>control_name</th>\n",
-       "      <th>document</th>\n",
-       "      <th>control_text_corrected</th>\n",
-       "      <th>full_control_text</th>\n",
-       "      <th>BERTembeddings</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>121</td>\n",
-       "      <td>audit &amp; assurance</td>\n",
-       "      <td>A&amp;A-01</td>\n",
-       "      <td>audit and assurance policy and procedures</td>\n",
-       "      <td>ccm</td>\n",
-       "      <td>Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Review and update the policies and procedures at least annually....</td>\n",
-       "      <td>Audit &amp; assurance. Audit and assurance policy and procedures. Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Re...</td>\n",
-       "      <td>[[-0.32711124, -0.24001496, -0.9943467, 0.52882636, 0.87031597, -0.3757414, -0.5379881, -0.029107185, -0.9781098, -0.9988584, -0.82185704, 0.9518274, 0.34914154, 0.90948486, -0.26283824, -0.579472...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  ...                                                                                                                                                                                           BERTembeddings\n",
-       "0         121  ...  [[-0.32711124, -0.24001496, -0.9943467, 0.52882636, 0.87031597, -0.3757414, -0.5379881, -0.029107185, -0.9781098, -0.9988584, -0.82185704, 0.9518274, 0.34914154, 0.90948486, -0.26283824, -0.579472...\n",
-       "\n",
-       "[1 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# embeddings not in same form (see last columns)\n",
-    "df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put embeddings in same form (simple list, not list of one element which is a list of embeddings)\n",
+    "# transform embeddings from embedded list [[num, num]] to simple list [num, num]\n",
     "df['BERTembeddings'] = df['BERTembeddings'].apply(lambda x: x[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +315,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>control_category</th>\n",
        "      <th>control_code</th>\n",
        "      <th>control_name</th>\n",
@@ -375,8 +326,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>121</td>\n",
+       "      <th>121</th>\n",
        "      <td>audit &amp; assurance</td>\n",
        "      <td>A&amp;A-01</td>\n",
        "      <td>audit and assurance policy and procedures</td>\n",
@@ -385,25 +335,36 @@
        "      <td>Audit &amp; assurance. Audit and assurance policy and procedures. Establish, document, approve, communicate, apply, evaluate, and maintain audit and assurance policies and procedures and standards. Re...</td>\n",
        "      <td>[-0.32711124, -0.24001496, -0.9943467, 0.52882636, 0.87031597, -0.3757414, -0.5379881, -0.029107185, -0.9781098, -0.9988584, -0.82185704, 0.9518274, 0.34914154, 0.90948486, -0.26283824, -0.5794722...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>audit &amp; assurance</td>\n",
+       "      <td>A&amp;A-02</td>\n",
+       "      <td>independent assessments</td>\n",
+       "      <td>ccm</td>\n",
+       "      <td>Conduct an independent audit and assurance assessment according to relevant standards at least annually. The independent audit and assurance should be free from conflicts of interest and undue inf...</td>\n",
+       "      <td>Audit &amp; assurance. Independent assessments. Conduct an independent audit and assurance assessment according to relevant standards at least annually. The independent audit and assurance should be f...</td>\n",
+       "      <td>[-0.71023166, -0.40096354, -0.99866545, 0.8446086, 0.9410193, -0.51828206, 0.5187864, 0.13894705, -0.99262995, -0.99993604, -0.9070421, 0.987048, 0.5374107, 0.9503139, -0.060270753, -0.85017586, -...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  ...                                                                                                                                                                                           BERTembeddings\n",
-       "0         121  ...  [-0.32711124, -0.24001496, -0.9943467, 0.52882636, 0.87031597, -0.3757414, -0.5379881, -0.029107185, -0.9781098, -0.9988584, -0.82185704, 0.9518274, 0.34914154, 0.90948486, -0.26283824, -0.5794722...\n",
+       "      control_category  ...                                                                                                                                                                                           BERTembeddings\n",
+       "121  audit & assurance  ...  [-0.32711124, -0.24001496, -0.9943467, 0.52882636, 0.87031597, -0.3757414, -0.5379881, -0.029107185, -0.9781098, -0.9988584, -0.82185704, 0.9518274, 0.34914154, 0.90948486, -0.26283824, -0.5794722...\n",
+       "122  audit & assurance  ...  [-0.71023166, -0.40096354, -0.99866545, 0.8446086, 0.9410193, -0.51828206, 0.5187864, 0.13894705, -0.99262995, -0.99993604, -0.9070421, 0.987048, 0.5374107, 0.9503139, -0.060270753, -0.85017586, -...\n",
        "\n",
-       "[1 rows x 8 columns]"
+       "[2 rows x 7 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# now all embeddings in correct form\n",
-    "df.head(1)"
+    "# inspect\n",
+    "df.head(2)"
    ]
   },
   {
